--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
   "dependencies": {
     "@remix-run/react": "^1.3.3",
     "@remix-run/serve": "^1.3.3",
+    "bootstrap": "^5.1.3",
+    "front-matter": "^4.0.2",
+    "marked": "^4.0.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remix": "^1.3.3"
+    "remix": "^1.3.3",
+    "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.3.3",
     "@remix-run/eslint-config": "^1.3.3",
+    "@types/marked": "^4.0.3",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "eslint": "^8.11.0",
