--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "bootstrap": "^5.1.3",
     "front-matter": "^4.0.2",
     "marked": "^4.0.12",
+    "match-sorter": "^6.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.34.17",
     "remix": "^1.3.3",
     "tiny-invariant": "^1.2.0"
   },
