--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,25 +2,13 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "remix: debug server-side",
-      "type": "node-terminal",
-      "request": "launch",
-      "command": "npm run dev"
-    },
-    {
-      "name": "remix: debug client-side",
-      "type": "pwa-chrome",
-      "request": "launch",
-      "url": "http://localhost:3000"
-    },
-    {
       "name": "remix: debug full stack",
       "type": "node-terminal",
       "request": "launch",
       "command": "npm run dev",
       "console": "integratedTerminal",
       "serverReadyAction": {
-        "pattern": "Server started at (https?://.+)",
+        "pattern": "Remix App Server started at (https?://.+)",
         "uriFormat": "%s",
         "action": "debugWithChrome"
       }
