--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "remix-serve build"
   },
   "dependencies": {
+    "@prisma/client": "^3.11.1",
     "@remix-run/react": "^1.3.3",
     "@remix-run/serve": "^1.3.3",
     "bootstrap": "^5.1.3",
@@ -19,7 +20,7 @@
     "match-sorter": "^6.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-query": "^3.34.17",
+    "react-query": "^3.34.18",
     "remix": "^1.3.3",
     "tiny-invariant": "^1.2.0"
   },
@@ -30,6 +31,7 @@
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "eslint": "^8.11.0",
+    "prisma": "^3.11.1",
     "typescript": "^4.5.5"
   },
   "engines": {
