--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,11 @@
     "resolveJsonModule": true,
     "target": "ES2019",
     "strict": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictPropertyInitialization": true,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
     "baseUrl": ".",
     "paths": {
       "~/*": ["./app/*"]
