--- a/package.json
+++ b/package.json
@@ -8,31 +8,34 @@
     "build": "remix build",
     "dev": "remix dev",
     "postinstall": "remix setup node",
-    "start": "remix-serve build"
+    "start": "remix-serve build",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "@prisma/client": "^3.11.1",
-    "@remix-run/react": "^1.3.3",
-    "@remix-run/serve": "^1.3.3",
+    "@remix-run/react": "^1.3.4",
+    "@remix-run/serve": "^1.3.4",
     "bootstrap": "^5.1.3",
     "front-matter": "^4.0.2",
     "marked": "^4.0.12",
     "match-sorter": "^6.3.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-query": "^3.34.18",
-    "remix": "^1.3.3",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-query": "^3.34.19",
+    "remix": "^1.3.4",
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.3.3",
-    "@remix-run/eslint-config": "^1.3.3",
+    "@remix-run/dev": "^1.3.4",
+    "@remix-run/eslint-config": "^1.3.4",
     "@types/marked": "^4.0.3",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
-    "eslint": "^8.11.0",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
+    "eslint": "^8.12.0",
     "prisma": "^3.11.1",
-    "typescript": "^4.5.5"
+    "typescript": "^4.6.3"
   },
   "engines": {
     "node": ">=14"
