--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "scripts": {
     "build": "remix build",
     "dev": "remix dev",
-    "postinstall": "remix setup node",
     "start": "remix-serve build"
   },
   "dependencies": {
+    "@remix-run/node": "^1.4.1",
     "@remix-run/react": "^1.4.1",
     "@remix-run/serve": "^1.4.1",
     "bootstrap": "^5.1.3",
@@ -18,7 +18,6 @@
     "marked": "^4.0.14",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "remix": "^1.4.1",
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
