--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "scripts": {
     "build": "remix build",
     "dev": "remix dev",
-    "postinstall": "remix setup node",
     "start": "remix-serve build",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "@prisma/client": "^3.13.0",
+    "@remix-run/node": "^1.4.3",
     "@remix-run/react": "^1.4.3",
     "@remix-run/serve": "^1.4.3",
     "bootstrap": "^5.1.3",
@@ -22,7 +22,6 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-query": "^3.38.0",
-    "remix": "^1.4.3",
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
