--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "remix build",
     "dev": "remix dev",
     "start": "remix-serve build",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "format": "prettier . --write"
   },
   "dependencies": {
     "@prisma/client": "^3.13.0",
@@ -33,6 +34,7 @@
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "eslint": "^8.14.0",
+    "prettier": "^2.6.2",
     "prisma": "^3.13.0",
     "typescript": "^4.6.4"
   },
