--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@remix-run/react": "^1.4.3",
     "@remix-run/serve": "^1.4.3",
     "bootstrap": "^5.1.3",
+    "clsx": "^1.1.1",
     "front-matter": "^4.0.2",
     "marked": "^4.0.14",
     "match-sorter": "^6.3.1",
